// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminInputButton Test User Login change type for test click 1 1`] = `
<styled.div
  horizontal={true}
  padding="0"
  width="100%"
>
  <styled.input
    className=""
    disabled={true}
    onChange={[Function]}
    right={true}
    value=""
  />
  <button
    className="form-button"
    disabled={true}
    onClick={[Function]}
  >
    Collect Fee
  </button>
</styled.div>
`;

exports[`AdminInputButton Test User Login change type for test click 1 2`] = `
<styled.div
  horizontal={true}
  padding="0"
  width="100%"
>
  <styled.input
    className=""
    disabled={true}
    onChange={[Function]}
    right={true}
    value=""
  />
  <button
    className="form-button"
    disabled={true}
    onClick={[Function]}
  >
    Collect Fee
  </button>
</styled.div>
`;

exports[`AdminInputButton Test User Login change type for test click 1 3`] = `
<styled.div
  horizontal={true}
  padding="0"
  width="100%"
>
  <styled.input
    className="input-error"
    disabled={true}
    onChange={[Function]}
    right={true}
    value=""
  />
  <button
    className="form-button"
    disabled={true}
    onClick={[Function]}
  >
    Collect Fee
  </button>
</styled.div>
`;

exports[`AdminInputButton Test User Login change type for test click 2 1`] = `
<styled.div
  horizontal={true}
  padding="0"
  width="100%"
>
  <styled.input
    className=""
    disabled={true}
    onChange={[Function]}
    right={true}
    value=""
  />
  <button
    className="form-button"
    disabled={true}
    onClick={[Function]}
  >
    Set Value
  </button>
</styled.div>
`;

exports[`AdminInputButton Test User Login change type for test click 2 2`] = `
<styled.div
  horizontal={true}
  padding="0"
  width="100%"
>
  <styled.input
    className=""
    disabled={true}
    onChange={[Function]}
    right={true}
    value=""
  />
  <button
    className="form-button"
    disabled={true}
    onClick={[Function]}
  >
    Set Value
  </button>
</styled.div>
`;

exports[`AdminInputButton Test User Login test Snapshot 1`] = `
<styled.div
  horizontal={true}
  padding="0"
  width="100%"
>
  <styled.input
    className=""
    disabled={true}
    onChange={[Function]}
    right={true}
    value=""
  />
  <styled.input
    className=""
    disabled={true}
    onChange={[Function]}
    right={true}
    value=""
  />
  <button
    className="form-button"
    disabled={true}
    onClick={[Function]}
  >
    Add Address
  </button>
</styled.div>
`;

exports[`AdminInputButton Test User Login test Snapshot 2`] = `
<styled.div
  horizontal={true}
  padding="0"
  width="100%"
>
  <styled.input
    className=""
    disabled={true}
    onChange={[Function]}
    right={true}
    value="123"
  />
  <styled.input
    className=""
    disabled={true}
    onChange={[Function]}
    right={true}
    value=""
  />
  <button
    className="form-button"
    disabled={true}
    onClick={[Function]}
  >
    Add Address
  </button>
</styled.div>
`;

exports[`AdminInputButton Test User Login test Snapshot 3`] = `
<styled.div
  horizontal={true}
  padding="0"
  width="100%"
>
  <styled.input
    className=""
    disabled={true}
    onChange={[Function]}
    right={true}
    value="123"
  />
  <styled.input
    className=""
    disabled={true}
    onChange={[Function]}
    right={true}
    value="123"
  />
  <button
    className="form-button"
    disabled={true}
    onClick={[Function]}
  >
    Add Address
  </button>
</styled.div>
`;

exports[`AdminInputButton Test User Login test Snapshot 4`] = `
<styled.div
  horizontal={true}
  padding="0"
  width="100%"
>
  <styled.input
    className=""
    disabled={true}
    onChange={[Function]}
    right={true}
    value=""
  />
  <styled.input
    className=""
    disabled={true}
    onChange={[Function]}
    right={true}
    value=""
  />
  <button
    className="form-button"
    disabled={true}
    onClick={[Function]}
  >
    Add Address
  </button>
</styled.div>
`;
